tooling/nargo_cli/tests/snapshots/execution_failure/u128_multiplication_overflow/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to multiply with overflow
  ┌─ src/main.nr:6:5
  │
6 │     x * y
  │     -----
  │
  = Call stack:
    1. src/main.nr:6:5

Failed assertion
