tooling/nargo_cli/tests/snapshots/execution_failure/u128_multiplication_overflow/execute__tests__u128_multiplication_overflow_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Assertion failed: attempt to multiply with overflow
  ┌─ src/main.nr:6:5
  │
6 │     x * y
  │     -----
  │
  = Call stack:
    1. src/main.nr:6:5

Failed assertion
